add migration for all modules
